WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93944
[BlackBerry] Some callback of Select onchange doesn't work
https://bugs.webkit.org/show_bug.cgi?id=93944
Summary
[BlackBerry] Some callback of Select onchange doesn't work
Charles Wei
Reported
2012-08-14 01:45:31 PDT
Internal Tracking No. 190604. Issue: <select onchange="location.href = this.value" class="category" name="goto"> <option value="/news/">Choose News Categories ...</option> <option value="/news/exclusive/">Exclusive</option> <option value="/news/worldwide/">Worldwide</option> <option value="/news/economy/">Economy</option> </select> doesn't work when the selection changes.
Attachments
Patch
(4.66 KB, patch)
2012-08-14 02:30 PDT
,
Charles Wei
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Charles Wei
Comment 1
2012-08-14 02:30:20 PDT
Created
attachment 158267
[details]
Patch
Antonio Gomes
Comment 2
2012-08-14 05:38:55 PDT
It looks sane to me, but would like Crystal to have a chance to look.
George Staikos
Comment 3
2012-08-14 07:48:25 PDT
Comment on
attachment 158267
[details]
Patch This is covered by existing tests.
WebKit Review Bot
Comment 4
2012-08-14 08:09:24 PDT
Comment on
attachment 158267
[details]
Patch Clearing flags on attachment: 158267 Committed
r125565
: <
http://trac.webkit.org/changeset/125565
>
WebKit Review Bot
Comment 5
2012-08-14 08:09:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug