Source/WebKit/blackberry/WebCoreSupport/SelectPopupClient.cpp
@@ -44,6 +44,7 @@ SelectPopupClient::SelectPopupClient(bool multiple, int size, const ScopeArray<B
     , m_size(size)
     , m_webPage(webPage)
     , m_element(element)
+    , m_notifyChangeTimer(this, &SelectPopupClient::notifySelectionChange)
 {
     generateHTML(multiple, size, labels, enableds, itemType, selecteds);
 }
@@ -173,10 +174,10 @@ void SelectPopupClient::setValueAndClosePopup(int, const String& stringValue)
     }
     // Force repaint because we do not send mouse events to the select element
     // and the element doesn't automatically repaint itself.
-    m_element->dispatchFormControlChangeEvent();
     if (m_element->renderer())
         m_element->renderer()->repaint();
-    closePopup();
+
+    m_notifyChangeTimer.startOneShot(0);
 }
 
 void SelectPopupClient::didClosePopup()
@@ -192,5 +193,13 @@ void SelectPopupClient::writeDocument(DocumentWriter& writer)
     writer.addData(m_source.utf8().data(), m_source.utf8().length());
     writer.end();
 }
+
+void SelectPopupClient::notifySelectionChange(WebCore::Timer<SelectPopupClient>*)
+{
+    if (m_element)
+        m_element->dispatchFormControlChangeEvent();
+    closePopup();
+}
+
 }
 
