Source/WebKit/blackberry/WebCoreSupport/SelectPopupClient.h
@@ -22,6 +22,7 @@
 #include "IntSize.h"
 #include "PagePopupClient.h"
 #include "ScopePointer.h"
+#include "Timer.h"
 #include "WTFString.h"
 #include "WebString.h"
 
@@ -44,6 +45,7 @@ public:
     void update(bool multiple, int size, const ScopeArray<BlackBerry::WebKit::WebString>& labels, bool* enableds, const int* itemType, bool* selecteds, BlackBerry::WebKit::WebPagePrivate*, HTMLSelectElement*);
 
     void generateHTML(bool multiple, int size, const ScopeArray<BlackBerry::WebKit::WebString>& labels, bool* enableds, const int* itemType, bool* selecteds);
+    void notifySelectionChange(WebCore::Timer<SelectPopupClient> *);
 
     void writeDocument(DocumentWriter&);
     virtual IntSize contentSize();
@@ -57,6 +59,7 @@ public:
     String m_source;
     BlackBerry::WebKit::WebPagePrivate* m_webPage;
     HTMLSelectElement* m_element;
+    WebCore::Timer<SelectPopupClient> m_notifyChangeTimer;
 };
 } // namespace WebCore
 #endif
